fixed conflicting scrollbar issue with footer

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,3 +8,8 @@ html {
 body {
     height: 100vh;
 }
+
+.content-container {
+    position: relative;
+    min-height: 100vh;
+}
