--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -4,6 +4,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    bottom: -98px;
+    width: 100vw;
 }
 .footerLinks {
     display: flex;
