--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
-    height: 90vh;
+    height: 90.5vh;
     margin: 0;
     padding: 0;
     display: flex;
