--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -1,6 +1,5 @@
 
 .post {
-    height: 90vh;
     overflow: scroll;
 }
 
