--- a/src/styles/Posts.css
+++ b/src/styles/Posts.css
@@ -1,6 +1,5 @@
 .posts {
     padding: 20px;
-    height: 90vh;
     overflow: scroll;
 }
 
