--- a/src/styles/Sneaker.css
+++ b/src/styles/Sneaker.css
@@ -1,5 +1,4 @@
 .sneakerpage {
-    height: 95vh;
     padding-top: 30px;
     padding-bottom: 50px;
     overflow: scroll;
